<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_createCard"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="5dp"
    android:orientation="vertical"
    android:weightSum="1"
    tools:context="xyz.miroslaw.gamification_android.createDeck.CreateDeckFragment">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/btn_createCard_previous"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:text="@string/createDeck_prev" />

        <Button
            android:id="@+id/btn_createCard_next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true"
            android:text="@string/all_next" />

        <TextView
            android:id="@+id/txt_createCard_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/btn_createCard_next"
            android:padding="20dp"
            android:text="@string/createDeck_type" />

        <Spinner
            android:id="@+id/spinner_createCard_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/btn_createCard_next"
            android:layout_toEndOf="@id/txt_createCard_type" />

        <RelativeLayout
            android:id="@+id/rl_createCard_typeValue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/btn_createCard_next"
            android:layout_toEndOf="@id/txt_createCard_type"
            android:paddingTop="5dp">
        </RelativeLayout>

        <Button
            android:id="@+id/btn_createCard_setImg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/createDeck_setImgGallery"
            android:layout_below="@id/btn_createCard_next"
            android:layout_alignParentEnd="true"
            android:visibility="visible" />

    </RelativeLayout>

    <TextView
        android:id="@+id/txt_createCard_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/createDeck_name"
        android:textSize="14sp" />

    <EditText
        android:id="@+id/et_createCard_name"
        android:layout_width="match_parent"
        android:layout_height="29dp"
        android:background="@android:color/white"
        android:backgroundTint="@color/colorAccent"
        android:hint="@string/all_enterName"
        android:inputType="text"
        android:maxLines="1"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:visibility="visible" />

    <TextView
        android:id="@+id/txt_createCard_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/createDeck_description"
        android:textSize="14sp" />

    <EditText
        android:id="@+id/et_createCard_description"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:background="@android:color/white"
        android:backgroundTint="@color/colorAccent"
        android:hint="@string/createDeck_enterDescription"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:visibility="visible" />

    <ImageView
        android:id="@+id/iv_createCard_award"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/all_award"
        app:srcCompat="@mipmap/ic_launcher" />

</LinearLayout>
