<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="xyz.miroslaw.gamification_android.menu.MenuActivity">


    <ListView
        android:id="@+id/lv_menu_menuitems"
        android:layout_width="match_parent"
        android:background="@color/colorPrimaryLight"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteY="8dp"
        tools:layout_editor_absoluteX="8dp" />

</RelativeLayout>
