<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="36dp"
        android:text="@string/change_name_txt"
        android:textAlignment="center"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/et_change_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/all_enterName"
        android:maxLines="1"
        android:inputType="text"
        android:textAlignment="center" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/btn_change_name_cancel"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="30dp"
            android:layout_marginTop="40dp"
            android:backgroundTint="@color/colorAlert"
            android:text="@string/all_cancel" />

        <Button
            android:id="@+id/btn_change_name_accept"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/btn_change_name_cancel"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="51dp"
            android:text="@string/all_ok" />
    </RelativeLayout>

</LinearLayout>