<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/fragment_deckList"
    tools:context="xyz.miroslaw.gamification_android.decksList.DeckListFragment">


    <android.support.v7.widget.RecyclerView
        android:id="@+id/rv_deckList"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</FrameLayout>
