package xyz.miroslaw.gamification_android;


import android.support.test.espresso.ViewInteraction;
import android.support.test.rule.ActivityTestRule;
import android.support.test.runner.AndroidJUnit4;
import android.test.suitebuilder.annotation.LargeTest;
import android.view.View;
import android.view.ViewGroup;
import android.view.ViewParent;

import org.hamcrest.Description;
import org.hamcrest.Matcher;
import org.hamcrest.TypeSafeMatcher;
import org.junit.Rule;
import org.junit.Test;
import org.junit.runner.RunWith;

import xyz.miroslaw.gamification_android.menu.MenuActivity;

import static android.support.test.espresso.Espresso.onView;
import static android.support.test.espresso.action.ViewActions.click;
import static android.support.test.espresso.action.ViewActions.closeSoftKeyboard;
import static android.support.test.espresso.action.ViewActions.replaceText;
import static android.support.test.espresso.assertion.ViewAssertions.matches;
import static android.support.test.espresso.matcher.ViewMatchers.isDisplayed;
import static android.support.test.espresso.matcher.ViewMatchers.withContentDescription;
import static android.support.test.espresso.matcher.ViewMatchers.withId;
import static android.support.test.espresso.matcher.ViewMatchers.withParent;
import static android.support.test.espresso.matcher.ViewMatchers.withText;
import static org.hamcrest.Matchers.allOf;

@LargeTest
@RunWith(AndroidJUnit4.class)
public class CreateDeckFillFormAndReturnTest {

    @Rule
    public ActivityTestRule<MenuActivity> mActivityTestRule = new ActivityTestRule<>(MenuActivity.class);

    @Test
    public void createDeckFillFormAndReturnTest() {
        ViewInteraction appCompatTextView = onView(
                allOf(withId(android.R.id.text1), withText("Create Deck"),
                        childAtPosition(
                                withId(R.id.lv_menu_menuitems),
                                0),
                        isDisplayed()));
        appCompatTextView.perform(click());

        ViewInteraction appCompatEditText = onView(
                allOf(withId(R.id.et_createCard_name),
                        withParent(allOf(withId(R.id.fragment_createCard),
                                withParent(withId(R.id.fragment_createCard)))),
                        isDisplayed()));
        appCompatEditText.perform(replaceText("name"), closeSoftKeyboard());

        ViewInteraction appCompatEditText2 = onView(
                allOf(withId(R.id.et_createCard_description),
                        withParent(allOf(withId(R.id.fragment_createCard),
                                withParent(withId(R.id.fragment_createCard)))),
                        isDisplayed()));
        appCompatEditText2.perform(replaceText("desc"), closeSoftKeyboard());

        ViewInteraction button = onView(
                allOf(withId(R.id.btn_createCard_previous),
                        childAtPosition(
                                childAtPosition(
                                        withId(R.id.fragment_createCard),
                                        0),
                                0),
                        isDisplayed()));
        button.check(matches(isDisplayed()));

        ViewInteraction relativeLayout = onView(
                allOf(withId(R.id.rl_createCard_typeValue),
                        childAtPosition(
                                childAtPosition(
                                        withId(R.id.fragment_createCard),
                                        0),
                                3),
                        isDisplayed()));
        relativeLayout.check(matches(isDisplayed()));

        ViewInteraction button2 = onView(
                allOf(withId(R.id.btn_createCard_setImg),
                        childAtPosition(
                                childAtPosition(
                                        withId(R.id.fragment_createCard),
                                        0),
                                4),
                        isDisplayed()));
        button2.check(matches(isDisplayed()));

        ViewInteraction imageView = onView(
                allOf(withId(R.id.iv_createCard_award), withContentDescription("award"),
                        childAtPosition(
                                allOf(withId(R.id.fragment_createCard),
                                        childAtPosition(
                                                withId(R.id.fragment_createCard),
                                                0)),
                                5),
                        isDisplayed()));
        imageView.check(matches(isDisplayed()));

        ViewInteraction appCompatButton = onView(
                allOf(withId(R.id.btn_createCard_next), withText("Next"), isDisplayed()));
        appCompatButton.perform(click());

        ViewInteraction appCompatButton2 = onView(
                allOf(withId(R.id.btn_createCard_previous), withText("Previous"), isDisplayed()));
        appCompatButton2.perform(click());

        ViewInteraction editText = onView(
                allOf(withId(R.id.et_createCard_name), withText("name"),
                        childAtPosition(
                                allOf(withId(R.id.fragment_createCard),
                                        childAtPosition(
                                                withId(R.id.fragment_createCard),
                                                0)),
                                2),
                        isDisplayed()));
        editText.check(matches(withText("name")));

        ViewInteraction editText2 = onView(
                allOf(withId(R.id.et_createCard_description), withText("desc"),
                        childAtPosition(
                                allOf(withId(R.id.fragment_createCard),
                                        childAtPosition(
                                                withId(R.id.fragment_createCard),
                                                0)),
                                4),
                        isDisplayed()));
        editText2.check(matches(withText("desc")));

    }

    private static Matcher<View> childAtPosition(
            final Matcher<View> parentMatcher, final int position) {

        return new TypeSafeMatcher<View>() {
            @Override
            public void describeTo(Description description) {
                description.appendText("Child at position " + position + " in parent ");
                parentMatcher.describeTo(description);
            }

            @Override
            public boolean matchesSafely(View view) {
                ViewParent parent = view.getParent();
                return parent instanceof ViewGroup && parentMatcher.matches(parent)
                        && view.equals(((ViewGroup) parent).getChildAt(position));
            }
        };
    }
}
